# lockgrid_auth_password_manager_react_rust

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: App.tsx  global.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  auth.rs  backup.rs  categories.rs  clipboard.rs  credentials.rs  files.rs  mod.rs  search.rs  settings.rs  tags.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs  password_gen.rs  secure_memory.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs
src-tauri/src/db/queries/: attachments.rs  categories.rs  credentials.rs  mod.rs  settings.rs  tags.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/state/: app_state.rs
src/components/layout/: DetailPanel.tsx  MainPanel.tsx  Sidebar.tsx  ThreeColumnLayout.tsx  TitleBar.tsx
src/components/shared/: CopyButton.tsx  PasswordStrength.tsx
src/hooks/: useClipboard.ts  useInactivityLock.ts  useTheme.ts
src/services/: attachmentService.ts  authService.ts  categoryService.ts  clipboardService.ts  credentialService.ts  fileService.ts  tagService.ts
src/types/: attachment.ts  category.ts  credential.ts  settings.ts  tag.ts
(+23 files in other folders)
